--- a/src/app/features/dashboard/components/dashboard.component.scss
+++ b/src/app/features/dashboard/components/dashboard.component.scss
@@ -1,11 +1,87 @@
-$primary-color: #7b06c6;
+@import '../../../../core.scss';
 
-h1 {
-  color: $primary-color;
-  text-align: center;
-}
-
-p {
-  font-size: 16px;
-  text-align: center;
-}
+.dashboard {
+    display: grid;
+    grid-template-areas:
+      'header header'
+      'nav main'
+      'footer footer';
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: auto 1fr auto;
+    min-height: 100vh;
+  
+    &__header {
+      grid-area: header;
+      color: $primary-color;
+      padding: 1rem;
+      border-bottom: 2px solid $primary-grey;
+  
+      h1 {
+        margin: 0;
+      }
+    }
+  
+    &__nav {
+      grid-area: nav;
+      background-color: #f4f4f4;
+      padding: 1rem;
+  
+      ul {
+        list-style: none;
+        padding: 0;
+  
+        li {
+          margin: 0.5rem 0;
+  
+          a {
+            text-decoration: none;
+            color: $primary-color;
+          }
+        }
+      }
+    }
+  
+    &__main {
+      grid-area: main;
+      padding: 1rem;
+  
+      &__section {
+        margin-bottom: 2rem;
+  
+        h2 {
+          margin-top: 0;
+        }
+      }
+    }
+  
+    &__footer {
+      grid-area: footer;
+      color: $primary-color;
+      text-align: center;
+      padding: 1rem;
+      border-top: 2px solid $primary-grey;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .dashboard {
+      grid-template-areas:
+        'header'
+        'nav'
+        'main'
+        'footer';
+      grid-template-columns: 1fr;
+      grid-template-rows: auto;
+  
+      &__nav {
+        padding: 0.5rem;
+  
+        ul {
+          display: flex;
+          justify-content: space-around;
+          padding: 0.5rem 0;
+        }
+      }
+    }
+  }
+  
