--- a/src/app/features/ai-prompts/components/ai-prompt/ai-prompt.component.scss
+++ b/src/app/features/ai-prompts/components/ai-prompt/ai-prompt.component.scss
@@ -1,3 +1,5 @@
+@import "../../../../../core.scss";
+
 .ai-prompt-container {
     display: flex;
     flex-direction: column;
@@ -36,23 +38,17 @@
             font-size: 16px;
             resize: vertical;
             box-sizing: border-box;
-            box-sizing: border-box;
-
         }
 
         .submit-button {
             align-self: flex-end;
             padding: 10px 20px;
-            background-color: #007bff;
+            background-color: $primary-color;
             color: #fff;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             font-size: 16px;
-
-            &:hover {
-                background-color: #0056b3;
-            }
         }
     }
 }
